--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "standard && tape 'test.js'"
+    "test": "tasks standard 'tape test.js'"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "sergeant": "^22.1.0"
   },
   "devDependencies": {
+    "@erickmerchant/tasks": "^0.2.0",
     "execa": "^1.0.0",
     "standard": "^12.0.1",
     "tape": "^4.9.1"
