--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
-    "sergeant": "^22.1.0"
+    "sergeant": "^22.1.1",
+    "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
     "@erickmerchant/tasks": "^0.2.0",
