--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "tasks standard 'tape test.js'"
+    "test": "standard && tape test.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,10 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
-    "sergeant": "^22.1.2",
+    "sergeant": "^22.1.4",
     "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
-    "@erickmerchant/tasks": "^0.3.0",
     "execa": "^1.0.0",
     "standard": "^12.0.1",
     "tape": "^4.9.1"
