--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "keywords": [],
   "author": "Erick Merchant <erickmerchant@gmail.com>",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
     "glob": "^7.1.3",
-    "sergeant": "^22.2.1",
+    "sergeant": "^23.0.0",
     "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
