--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "Erick Merchant <erickmerchant@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.1",
     "glob": "^7.1.3",
+    "kleur": "^3.0.1",
     "sergeant": "^23.1.0",
     "stream-to-promise": "^2.2.0"
   },
