--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ghost-hunter": "./cli.js"
   },
   "scripts": {
-    "test": "standard && tape test.js"
+    "test": "lint '**/*.js' '!fixtures' && tape test.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,12 @@
   "dependencies": {
     "glob": "^7.1.3",
     "kleur": "^3.0.1",
-    "sergeant": "^23.1.0",
+    "sergeant": "^23.2.0",
     "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
+    "@erickmerchant/lint": "^1.1.0",
     "execa": "^1.0.0",
-    "standard": "^12.0.1",
     "tape": "^4.9.1"
   }
 }
