--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   "author": "Erick Merchant <erickmerchant@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.15.0",
     "glob": "^7.1.3",
     "kleur": "^3.0.2",
-    "sergeant": "^24.1.2",
+    "sergeant": "^24.1.3",
     "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
-    "@erickmerchant/lint": "^1.10.3",
+    "@erickmerchant/lint": "^2.0.1",
     "execa": "^1.0.0",
     "tape": "^4.10.0"
   }
