--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "glob": "^7.1.3",
     "kleur": "^3.0.2",
-    "sergeant": "^24.1.3",
+    "sergeant": "^24.1.4",
     "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
@@ -27,5 +27,8 @@
     "eslint": "^5.15.1",
     "execa": "^1.0.0",
     "tape": "^4.10.0"
+  },
+  "engines": {
+    "node": ">=8"
   }
 }
