--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "glob": "^7.1.4",
     "kleur": "^3.0.3",
     "sergeant": "^26.1.3",
+    "standard": "^14.1.0",
     "stream-to-promise": "^2.2.0"
   },
   "devDependencies": {
-    "@erickmerchant/lint": "^3.0.2",
-    "eslint": "^6.0.1",
-    "execa": "^2.0.3",
+    "@erickmerchant/lint": "^3.1.2",
+    "eslint": "^6.2.2",
+    "execa": "^2.0.4",
     "tape": "^4.11.0"
   },
   "engines": {
